compiler/testData/diagnostics/tests/inlineClasses/inlineClassDeprecated.kt
// RUN_PIPELINE_TILL: BACKEND

<!INLINE_CLASS_DEPRECATED!>inline<!> class IC(val i: Int)

/* GENERATED_FIR_TAGS: classDeclaration, primaryConstructor, propertyDeclaration */
